[gd_scene load_steps=17 format=3 uid="uid://bdy2s3dnalakg"]

[ext_resource type="Script" path="res://scenes/gambling/gambling_screen.gd" id="1_d6ogw"]
[ext_resource type="Texture2D" uid="uid://bnu4x2uts4qos" path="res://art/environment/tilemap_packed.png" id="2_tqjph"]
[ext_resource type="Texture2D" uid="uid://jlglus6cp1a7" path="res://art/environment/tiles_packed_foreground.png" id="3_mysmy"]
[ext_resource type="PackedScene" uid="uid://dsgqwpeeukta2" path="res://fisherman.tscn" id="4_i7fxq"]
[ext_resource type="PackedScene" uid="uid://dio6685jsyc4v" path="res://scenes/fish/gambling_fish.tscn" id="5_rw0vn"]
[ext_resource type="Script" path="res://scenes/gambling/ChooseDiceHUD.gd" id="6_qmsod"]
[ext_resource type="PackedScene" uid="uid://2k5xicmblwpb" path="res://scenes/dice/unwrapped_dice.tscn" id="7_rkv6u"]
[ext_resource type="Theme" uid="uid://cj1iapyna1iri" path="res://global_theme.tres" id="8_7x3m7"]
[ext_resource type="PackedScene" uid="uid://b1kbdqw4a6rtl" path="res://scenes/dice/dice.tscn" id="9_n7shr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_r2liw"]
texture = ExtResource("2_tqjph")
texture_region_size = Vector2i(24, 24)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ob6wd"]
tile_size = Vector2i(24, 24)
sources/0 = SubResource("TileSetAtlasSource_r2liw")

[sub_resource type="TileMapPattern" id="TileMapPattern_frc68"]
tile_data = PackedInt32Array(0, 851968, 2, 1, 851968, 1)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_viruf"]
texture = ExtResource("3_mysmy")
texture_region_size = Vector2i(18, 18)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0

[sub_resource type="TileSet" id="TileSet_r7t6p"]
tile_size = Vector2i(18, 18)
sources/0 = SubResource("TileSetAtlasSource_viruf")
pattern_0 = SubResource("TileMapPattern_frc68")

[sub_resource type="Animation" id="Animation_bus4p"]
resource_name = "ease_in_gambling_screen"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fisherman:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.329877),
"update": 0,
"values": [Vector2(-630, 220), Vector2(-330, 220)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GamblingFish:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(961, 700), Vector2(961, 511)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rfjy8"]
_data = {
"ease_in_gambling_screen": SubResource("Animation_bus4p")
}

[node name="GamblingScreen" type="Node2D"]
script = ExtResource("1_d6ogw")

[node name="Background" type="TileMap" parent="."]
scale = Vector2(3, 3)
tile_set = SubResource("TileSet_ob6wd")
cell_quadrant_size = 24
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 65536, 0, 327680, 131072, 0, 393216, 131072, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 65536, 0, 327681, 131072, 0, 393217, 131072, 0, 65538, 0, 0, 131074, 0, 0, 196610, 0, 0, 262146, 65536, 0, 327682, 131072, 0, 393218, 131072, 0, 65539, 0, 0, 131075, 0, 0, 196611, 0, 0, 262147, 65536, 0, 327683, 131072, 0, 393219, 131072, 0, 65540, 0, 0, 131076, 0, 0, 196612, 0, 0, 262148, 65536, 0, 327684, 131072, 0, 393220, 131072, 0, 65541, 0, 0, 131077, 0, 0, 196613, 0, 0, 262149, 65536, 0, 327685, 131072, 0, 393221, 131072, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 65536, 0, 327686, 131072, 0, 393222, 131072, 0, 65543, 0, 0, 131079, 0, 0, 196615, 0, 0, 262151, 65536, 0, 327687, 131072, 0, 393223, 131072, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 65545, 0, 0, 131081, 0, 0, 196617, 0, 0, 131082, 0, 0, 196618, 0, 0, 262152, 65536, 0, 262153, 65536, 0, 262154, 65536, 0, 262155, 65536, 0, 262156, 65536, 0, 262157, 65536, 0, 262158, 65536, 0, 262159, 65536, 0, 327695, 131072, 0, 393231, 131072, 0, 458767, 131072, 0, 524303, 131072, 0, 458752, 131072, 0, 524288, 131072, 0, 458753, 131072, 0, 524289, 131072, 0, 458754, 131072, 0, 524290, 131072, 0, 458755, 131072, 0, 524291, 131072, 0, 458756, 131072, 0, 524292, 131072, 0, 458757, 131072, 0, 524293, 131072, 0, 458758, 131072, 0, 524294, 131072, 0, 458759, 131072, 0, 524295, 131072, 0, 327688, 131072, 0, 393224, 131072, 0, 458760, 131072, 0, 524296, 131072, 0, 327689, 131072, 0, 393225, 131072, 0, 458761, 131072, 0, 524297, 131072, 0, 327690, 131072, 0, 393226, 131072, 0, 458762, 131072, 0, 524298, 131072, 0, 327691, 131072, 0, 393227, 131072, 0, 458763, 131072, 0, 524299, 131072, 0, 327692, 131072, 0, 393228, 131072, 0, 458764, 131072, 0, 524300, 131072, 0, 327693, 131072, 0, 393229, 131072, 0, 458765, 131072, 0, 524301, 131072, 0, 327694, 131072, 0, 393230, 131072, 0, 458766, 131072, 0, 524302, 131072, 0, 10, 0, 0, 65546, 0, 0, 11, 0, 0, 65547, 0, 0, 131083, 0, 0, 196619, 0, 0, 12, 0, 0, 65548, 0, 0, 131084, 0, 0, 196620, 0, 0, 13, 0, 0, 65549, 0, 0, 131085, 0, 0, 196621, 0, 0, 14, 0, 0, 65550, 0, 0, 131086, 0, 0, 196622, 0, 0, 15, 0, 0, 65551, 0, 0, 131087, 0, 0, 196623, 0, 0)

[node name="Foreground" type="TileMap" parent="."]
z_index = 2
position = Vector2(-84, -36)
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_r7t6p")
cell_quadrant_size = 18
format = 2
layer_0/z_index = 1
layer_0/tile_data = PackedInt32Array(393216, 851968, 2, 458752, 851968, 3, 524288, 851968, 3, 589824, 851968, 3, 655360, 851968, 3, 720896, 851968, 3, 393217, 851968, 2, 458753, 851968, 3, 524289, 851968, 3, 589825, 851968, 3, 655361, 851968, 3, 720897, 851968, 3, 393218, 851968, 2, 458754, 851968, 3, 524290, 851968, 3, 589826, 851968, 3, 655362, 851968, 3, 720898, 851968, 3, 393219, 851968, 2, 458755, 851968, 3, 524291, 851968, 3, 589827, 851968, 3, 655363, 851968, 3, 720899, 851968, 3, 393220, 851968, 2, 458756, 851968, 3, 524292, 851968, 3, 589828, 851968, 3, 655364, 851968, 3, 720900, 851968, 3, 393221, 851968, 2, 458757, 851968, 3, 524293, 851968, 3, 589829, 851968, 3, 655365, 851968, 3, 720901, 851968, 3, 393222, 851968, 2, 458758, 851968, 3, 524294, 851968, 3, 589830, 851968, 3, 655366, 851968, 3, 720902, 851968, 3, 393223, 851968, 2, 458759, 851968, 3, 524295, 851968, 3, 589831, 851968, 3, 655367, 851968, 3, 720903, 851968, 3, 393224, 851968, 2, 458760, 851968, 3, 524296, 851968, 3, 589832, 851968, 3, 655368, 851968, 3, 720904, 851968, 3, 393225, 851968, 2, 458761, 851968, 3, 524297, 851968, 3, 589833, 851968, 3, 655369, 851968, 3, 720905, 851968, 3, 393226, 851968, 2, 458762, 851968, 3, 524298, 851968, 3, 589834, 851968, 3, 655370, 851968, 3, 720906, 851968, 3, 393227, 851968, 2, 458763, 851968, 3, 524299, 851968, 3, 589835, 851968, 3, 655371, 851968, 3, 720907, 851968, 3, 393228, 851968, 2, 458764, 851968, 3, 524300, 851968, 3, 589836, 851968, 3, 655372, 851968, 3, 720908, 851968, 3, 393229, 851968, 2, 458765, 851968, 3, 524301, 851968, 3, 589837, 851968, 3, 655373, 851968, 3, 720909, 851968, 3, 393230, 851968, 2, 458766, 851968, 3, 524302, 851968, 3, 589838, 851968, 3, 655374, 851968, 3, 720910, 851968, 3, 393231, 851968, 2, 458767, 851968, 3, 524303, 851968, 3, 589839, 851968, 3, 655375, 851968, 3, 720911, 851968, 3, 393232, 851968, 2, 458768, 851968, 3, 524304, 851968, 3, 589840, 851968, 3, 655376, 851968, 3, 720912, 851968, 3, 393233, 851968, 2, 458769, 851968, 3, 524305, 851968, 3, 589841, 851968, 3, 655377, 851968, 3, 720913, 851968, 3, 393234, 851968, 2, 458770, 851968, 3, 524306, 851968, 3, 589842, 851968, 3, 655378, 851968, 3, 720914, 851968, 3)

[node name="Foreground2" type="TileMap" parent="."]
z_index = 99
position = Vector2(-81, 65)
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_r7t6p")
cell_quadrant_size = 18
format = 2
layer_0/z_index = 1
layer_0/tile_data = PackedInt32Array(393216, 851968, 2, 458752, 851968, 3, 524288, 851968, 3, 393217, 851968, 2, 458753, 851968, 3, 524289, 851968, 3, 393218, 851968, 2, 458754, 851968, 3, 524290, 851968, 3, 393219, 851968, 2, 458755, 851968, 3, 524291, 851968, 3, 393220, 851968, 2, 458756, 851968, 3, 524292, 851968, 3, 393221, 851968, 2, 458757, 851968, 3, 524293, 851968, 3, 393222, 851968, 2, 458758, 851968, 3, 524294, 851968, 3, 393223, 851968, 2, 458759, 851968, 3, 524295, 851968, 3, 393224, 851968, 2, 458760, 851968, 3, 524296, 851968, 3, 393225, 851968, 2, 458761, 851968, 3, 524297, 851968, 3, 393226, 851968, 2, 458762, 851968, 3, 524298, 851968, 3, 393227, 851968, 2, 458763, 851968, 3, 524299, 851968, 3, 393228, 851968, 2, 458764, 851968, 3, 524300, 851968, 3, 393229, 851968, 2, 458765, 851968, 3, 524301, 851968, 3, 393230, 851968, 2, 458766, 851968, 3, 524302, 851968, 3, 393231, 851968, 2, 458767, 851968, 3, 524303, 851968, 3, 393232, 851968, 2, 458768, 851968, 3, 524304, 851968, 3, 393233, 851968, 2, 458769, 851968, 3, 524305, 851968, 3, 393234, 851968, 2, 458770, 851968, 3, 524306, 851968, 3)

[node name="Fisherman" parent="." instance=ExtResource("4_i7fxq")]
z_index = 1
position = Vector2(-630, 220)

[node name="GamblingFish" parent="." instance=ExtResource("5_rw0vn")]
z_index = 3
position = Vector2(961, 700)
rarity = "legendary"
dice = [1, 2, 3, 4, 5, 6]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rfjy8")
}

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HUDControl" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerLabel" type="Label" parent="HUD/HUDControl"]
layout_mode = 0
offset_left = 23.0
offset_top = 590.0
offset_right = 323.0
offset_bottom = 625.0
theme = ExtResource("8_7x3m7")
theme_override_colors/font_color = Color(0.309804, 0, 0.129412, 1)
text = "Player "

[node name="FishLabel" type="Label" parent="HUD/HUDControl"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 0
offset_left = 821.0
offset_top = 590.0
offset_right = 1121.0
offset_bottom = 625.0
pivot_offset = Vector2(299, 34)
theme = ExtResource("8_7x3m7")
theme_override_colors/font_color = Color(0.309804, 0, 0.129412, 1)
text = "Common Fish"
horizontal_alignment = 2
vertical_alignment = 3

[node name="ChooseDiceControl" type="Control" parent="HUD/HUDControl"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_qmsod")

[node name="ChooseDicePanel" type="Panel" parent="HUD/HUDControl/ChooseDiceControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 256.0
offset_top = 93.0
offset_right = 856.0
offset_bottom = 368.0
grow_horizontal = 2
pivot_offset = Vector2(300, 0)

[node name="UnwrappedDiceA" parent="HUD/HUDControl/ChooseDiceControl/ChooseDicePanel" instance=ExtResource("7_rkv6u")]
position = Vector2(68, 61)
scale = Vector2(0.15, 0.15)

[node name="UnwrappedDiceB" parent="HUD/HUDControl/ChooseDiceControl/ChooseDicePanel" instance=ExtResource("7_rkv6u")]
position = Vector2(244, 61)
scale = Vector2(0.15, 0.15)

[node name="UnwrappedDiceC" parent="HUD/HUDControl/ChooseDiceControl/ChooseDicePanel" instance=ExtResource("7_rkv6u")]
position = Vector2(412, 61)
scale = Vector2(0.15, 0.15)

[node name="Label" type="Label" parent="HUD/HUDControl/ChooseDiceControl/ChooseDicePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -123.0
offset_top = 11.0
offset_right = 123.0
offset_bottom = 46.0
grow_horizontal = 2
theme = ExtResource("8_7x3m7")
text = "Choose your roll"
horizontal_alignment = 1

[node name="PickA" type="Button" parent="HUD/HUDControl/ChooseDiceControl/ChooseDicePanel"]
layout_mode = 0
offset_left = 92.0
offset_top = 227.0
offset_right = 166.0
offset_bottom = 267.0
theme = ExtResource("8_7x3m7")
text = "Pick"

[node name="PickB" type="Button" parent="HUD/HUDControl/ChooseDiceControl/ChooseDicePanel"]
layout_mode = 0
offset_left = 268.0
offset_top = 227.0
offset_right = 342.0
offset_bottom = 267.0
theme = ExtResource("8_7x3m7")
text = "Pick"

[node name="PickC" type="Button" parent="HUD/HUDControl/ChooseDiceControl/ChooseDicePanel"]
layout_mode = 0
offset_left = 436.0
offset_top = 227.0
offset_right = 510.0
offset_bottom = 267.0
theme = ExtResource("8_7x3m7")
text = "Pick"

[node name="FishPickedPanel" type="Panel" parent="HUD/HUDControl/ChooseDiceControl"]
layout_mode = 0
offset_left = 544.0
offset_top = 465.0
offset_right = 728.0
offset_bottom = 632.0

[node name="UnwrappedDiceFish" parent="HUD/HUDControl/ChooseDiceControl/FishPickedPanel" instance=ExtResource("7_rkv6u")]
position = Vector2(14, 159)
rotation = -1.5708
scale = Vector2(0.15, 0.15)
colour = "green"

[node name="Label" type="Label" parent="HUD/HUDControl/ChooseDiceControl/FishPickedPanel"]
layout_mode = 0
offset_left = 14.0
offset_top = 7.0
offset_right = 170.0
offset_bottom = 42.0
theme = ExtResource("8_7x3m7")
text = "Fish picks"

[node name="RollControl" type="Control" parent="HUD/HUDControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 1132.0
offset_bottom = 664.0
grow_horizontal = 2

[node name="Panel" type="Panel" parent="HUD/HUDControl/RollControl"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -272.0
offset_top = 93.0
offset_right = 280.0
offset_bottom = 426.0
grow_horizontal = 2

[node name="Label" type="Label" parent="HUD/HUDControl/RollControl/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -47.0
offset_top = 16.0
offset_right = 47.0
offset_bottom = 51.0
grow_horizontal = 2
theme = ExtResource("8_7x3m7")
text = "ROLL!"
horizontal_alignment = 1

[node name="PlayerDie" parent="HUD/HUDControl/RollControl/Panel" instance=ExtResource("9_n7shr")]
scale = Vector2(0.5, 0.5)
colour = "red"

[node name="FishDie" parent="HUD/HUDControl/RollControl/Panel" instance=ExtResource("9_n7shr")]
position = Vector2(416, 136)
scale = Vector2(0.5, 0.5)

[node name="RollButton" type="Button" parent="HUD/HUDControl/RollControl/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -51.0
offset_top = 283.0
offset_right = 51.0
offset_bottom = 323.0
grow_horizontal = 2
theme = ExtResource("8_7x3m7")
text = "ROLL!"

[node name="Status" type="Label" parent="HUD/HUDControl/RollControl/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 223.0
offset_right = 250.0
offset_bottom = 258.0
grow_horizontal = 2
theme = ExtResource("8_7x3m7")
text = "Status"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="HUD/HUDControl/ChooseDiceControl/ChooseDicePanel/PickA" to="." method="_on_pick_a_pressed"]
[connection signal="pressed" from="HUD/HUDControl/ChooseDiceControl/ChooseDicePanel/PickB" to="." method="_on_pick_b_pressed"]
[connection signal="pressed" from="HUD/HUDControl/ChooseDiceControl/ChooseDicePanel/PickC" to="." method="_on_pick_c_pressed"]
[connection signal="rolled" from="HUD/HUDControl/RollControl/Panel/PlayerDie" to="." method="_on_player_die_rolled"]
[connection signal="rolled" from="HUD/HUDControl/RollControl/Panel/FishDie" to="." method="_on_fish_die_rolled"]
[connection signal="pressed" from="HUD/HUDControl/RollControl/Panel/RollButton" to="." method="_on_roll_button_pressed"]
